[gd_scene load_steps=9 format=4 uid="uid://cwv5gc0xtkwnj"]

[ext_resource type="Script" path="res://03_Scripts/gameManager.gd" id="1_2itfj"]
[ext_resource type="Texture2D" uid="uid://82kkr7w008o4" path="res://01_Assets/01_Sprites/tileset.png" id="1_5scgh"]
[ext_resource type="PackedScene" uid="uid://buj848fcldj5a" path="res://02_Scenes/player_one.tscn" id="2_ttv1b"]
[ext_resource type="PackedScene" uid="uid://dgcn654g7vlox" path="res://02_Scenes/player_two.tscn" id="3_aahkk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_43gq2"]
texture = ExtResource("1_5scgh")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.125, 1.03125, -1.0625, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -0.96875, -1.0625, -8, -1.125)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.125, 1.03125, -1.0625, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.125, -8, -1.0625)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -0.96875, -1.0625, -8, -1.125)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.125, -8, -1.0625)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0

[sub_resource type="TileSet" id="TileSet_l2ehq"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_43gq2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug30u"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbhxs"]
bg_color = Color(1, 1, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_2itfj")

[node name="TileMap" type="TileMap" parent="." groups=["TileMap"]]
position = Vector2(0, 135)
tile_set = SubResource("TileSet_l2ehq")
format = 2

[node name="Background" type="TileMapLayer" parent="TileMap" groups=["TileMap"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAD0//H/AAAAAAcAAAD0//L/AAAAAAcAAAD0//P/AAAAAAcAAAD0//T/AAAAAAcAAAD0//X/AAAAAAcAAAD0//b/AAAAAAcAAAD0//f/AAAAAAcAAAD0//j/AAAAAAcAAAD0//n/AAAAAAcAAAD0//r/AAAAAAcAAAD0//v/AAAAAAcAAAD0//z/AAAAAAcAAAD0//3/AAAAAAcAAAD0//7/AAAAAAcAAAD0////AAAAAAcAAAD1//H/AAAAAAcAAAD1//L/AAAAAAcAAAD1//P/AAAAAAcAAAD1//T/AAAAAAcAAAD1//X/AAAAAAcAAAD1//b/AAAAAAcAAAD1//f/AAAAAAcAAAD1//j/AAAAAAcAAAD1//n/AAAAAAcAAAD1//r/AAAAAAcAAAD1//v/AAAAAAcAAAD1//z/AAAAAAcAAAD1//3/AAAAAAcAAAD1//7/AAAAAAcAAAD1////AAAAAAcAAAD2//H/AAAAAAcAAAD2//L/AAAAAAcAAAD2//P/AAAAAAcAAAD2//T/AAAAAAcAAAD2//X/AAAAAAcAAAD2//b/AAAAAAcAAAD2//f/AAAAAAcAAAD2//j/AAAAAAcAAAD2//n/AAAAAAcAAAD2//r/AAAAAAcAAAD2//v/AAAAAAcAAAD2//z/AAAAAAcAAAD2//3/AAAAAAcAAAD2//7/AAAAAAcAAAD2////AAAAAAcAAAD3//H/AAAAAAcAAAD3//L/AAAAAAcAAAD3//P/AAAAAAcAAAD3//T/AAAAAAcAAAD3//X/AAAAAAcAAAD3//b/AAAAAAcAAAD3//f/AAAAAAcAAAD3//j/AAAAAAcAAAD3//n/AAAAAAcAAAD3//r/AAAAAAcAAAD3//v/AAAAAAcAAAD3//z/AAAAAAcAAAD3//3/AAAAAAcAAAD3//7/AAAAAAcAAAD3////AAAAAAcAAAD4//H/AAAAAAcAAAD4//L/AAAAAAcAAAD4//P/AAAAAAcAAAD4//T/AAAAAAcAAAD4//X/AAAAAAcAAAD4//b/AAAAAAcAAAD4//f/AAAAAAcAAAD4//j/AAAAAAcAAAD4//n/AAAAAAcAAAD4//r/AAAAAAcAAAD4//v/AAAAAAcAAAD4//z/AAAAAAcAAAD4//3/AAAAAAcAAAD4//7/AAAAAAcAAAD4////AAAAAAcAAAD5//H/AAAAAAcAAAD5//L/AAAAAAcAAAD5//P/AAAAAAcAAAD5//T/AAAAAAcAAAD5//X/AAAAAAcAAAD5//b/AAAAAAcAAAD5//f/AAAAAAcAAAD5//j/AAAAAAcAAAD5//n/AAAAAAcAAAD5//r/AAAAAAcAAAD5//v/AAAAAAcAAAD5//z/AAAAAAcAAAD5//3/AAAAAAcAAAD5//7/AAAAAAcAAAD5////AAAAAAcAAAD6//H/AAAAAAcAAAD6//L/AAAAAAcAAAD6//P/AAAAAAcAAAD6//T/AAAAAAcAAAD6//X/AAAAAAcAAAD6//b/AAAAAAcAAAD6//f/AAAAAAcAAAD6//j/AAAAAAcAAAD6//n/AAAAAAcAAAD6//r/AAAAAAcAAAD6//v/AAAAAAcAAAD6//z/AAAAAAcAAAD6//3/AAAAAAcAAAD6//7/AAAAAAcAAAD6////AAAAAAcAAAD7//H/AAAAAAcAAAD7//L/AAAAAAcAAAD7//P/AAAAAAcAAAD7//T/AAAAAAcAAAD7//X/AAAAAAcAAAD7//b/AAAAAAcAAAD7//f/AAAAAAcAAAD7//j/AAAAAAcAAAD7//n/AAAAAAcAAAD7//r/AAAAAAcAAAD7//v/AAAAAAcAAAD7//z/AAAAAAcAAAD7//3/AAAAAAcAAAD7//7/AAAAAAcAAAD7////AAAAAAcAAAD8//H/AAAAAAcAAAD8//L/AAAAAAcAAAD8//P/AAAAAAcAAAD8//T/AAAAAAcAAAD8//X/AAAAAAcAAAD8//b/AAAAAAcAAAD8//f/AAAAAAcAAAD8//j/AAAAAAcAAAD8//n/AAAAAAcAAAD8//r/AAAAAAcAAAD8//v/AAAAAAcAAAD8//z/AAAAAAcAAAD8//3/AAAAAAcAAAD8//7/AAAAAAcAAAD8////AAAAAAcAAAD9//H/AAAAAAcAAAD9//L/AAAAAAcAAAD9//P/AAAAAAcAAAD9//T/AAAAAAcAAAD9//X/AAAAAAcAAAD9//b/AAAAAAcAAAD9//f/AAAAAAcAAAD9//j/AAAAAAcAAAD9//n/AAAAAAcAAAD9//r/AAAAAAcAAAD9//v/AAAAAAcAAAD9//z/AAAAAAcAAAD9//3/AAAAAAcAAAD9//7/AAAAAAcAAAD9////AAAAAAcAAAD+//H/AAAAAAcAAAD+//L/AAAAAAcAAAD+//P/AAAAAAcAAAD+//T/AAAAAAcAAAD+//X/AAAAAAcAAAD+//b/AAAAAAcAAAD+//f/AAAAAAcAAAD+//j/AAAAAAcAAAD+//n/AAAAAAcAAAD+//r/AAAAAAcAAAD+//v/AAAAAAcAAAD+//z/AAAAAAcAAAD+//3/AAAAAAcAAAD+//7/AAAAAAcAAAD+////AAAAAAcAAAD///H/AAAAAAcAAAD///L/AAAAAAcAAAD///P/AAAAAAcAAAD///T/AAAAAAcAAAD///X/AAAAAAcAAAD///b/AAAAAAcAAAD///f/AAAAAAcAAAD///j/AAAAAAcAAAD///n/AAAAAAcAAAD///r/AAAAAAcAAAD///v/AAAAAAcAAAD///z/AAAAAAcAAAD///3/AAAAAAcAAAD///7/AAAAAAcAAAD/////AAAAAAcAAAAAAPH/AAAAAAcAAAAAAPL/AAAAAAcAAAAAAPP/AAAAAAcAAAAAAPT/AAAAAAcAAAAAAPX/AAAAAAcAAAAAAPb/AAAAAAcAAAAAAPf/AAAAAAcAAAAAAPj/AAAAAAcAAAAAAPn/AAAAAAcAAAAAAPr/AAAAAAcAAAAAAPv/AAAAAAcAAAAAAPz/AAAAAAcAAAAAAP3/AAAAAAcAAAAAAP7/AAAAAAcAAAAAAP//AAAAAAcAAAABAPH/AAAAAAcAAAABAPL/AAAAAAcAAAABAPP/AAAAAAcAAAABAPT/AAAAAAcAAAABAPX/AAAAAAcAAAABAPb/AAAAAAcAAAABAPf/AAAAAAcAAAABAPj/AAAAAAcAAAABAPn/AAAAAAcAAAABAPr/AAAAAAcAAAABAPv/AAAAAAcAAAABAPz/AAAAAAcAAAABAP3/AAAAAAcAAAABAP7/AAAAAAcAAAABAP//AAAAAAcAAAACAPH/AAAAAAcAAAACAPL/AAAAAAcAAAACAPP/AAAAAAcAAAACAPT/AAAAAAcAAAACAPX/AAAAAAcAAAACAPb/AAAAAAcAAAACAPf/AAAAAAcAAAACAPj/AAAAAAcAAAACAPn/AAAAAAcAAAACAPr/AAAAAAcAAAACAPv/AAAAAAcAAAACAPz/AAAAAAcAAAACAP3/AAAAAAcAAAACAP7/AAAAAAcAAAACAP//AAAAAAcAAAADAPH/AAAAAAcAAAADAPL/AAAAAAcAAAADAPP/AAAAAAcAAAADAPT/AAAAAAcAAAADAPX/AAAAAAcAAAADAPb/AAAAAAcAAAADAPf/AAAAAAcAAAADAPj/AAAAAAcAAAADAPn/AAAAAAcAAAADAPr/AAAAAAcAAAADAPv/AAAAAAcAAAADAPz/AAAAAAcAAAADAP3/AAAAAAcAAAADAP7/AAAAAAcAAAADAP//AAAAAAcAAAAEAPH/AAAAAAcAAAAEAPL/AAAAAAcAAAAEAPP/AAAAAAcAAAAEAPT/AAAAAAcAAAAEAPX/AAAAAAcAAAAEAPb/AAAAAAcAAAAEAPf/AAAAAAcAAAAEAPj/AAAAAAcAAAAEAPn/AAAAAAcAAAAEAPr/AAAAAAcAAAAEAPv/AAAAAAcAAAAEAPz/AAAAAAcAAAAEAP3/AAAAAAcAAAAEAP7/AAAAAAcAAAAEAP//AAAAAAcAAAAFAPH/AAAAAAcAAAAFAPL/AAAAAAcAAAAFAPP/AAAAAAcAAAAFAPT/AAAAAAcAAAAFAPX/AAAAAAcAAAAFAPb/AAAAAAcAAAAFAPf/AAAAAAcAAAAFAPj/AAAAAAcAAAAFAPn/AAAAAAcAAAAFAPr/AAAAAAcAAAAFAPv/AAAAAAcAAAAFAPz/AAAAAAcAAAAFAP3/AAAAAAcAAAAFAP7/AAAAAAcAAAAFAP//AAAAAAcAAAAGAPH/AAAAAAcAAAAGAPL/AAAAAAcAAAAGAPP/AAAAAAcAAAAGAPT/AAAAAAcAAAAGAPX/AAAAAAcAAAAGAPb/AAAAAAcAAAAGAPf/AAAAAAcAAAAGAPj/AAAAAAcAAAAGAPn/AAAAAAcAAAAGAPr/AAAAAAcAAAAGAPv/AAAAAAcAAAAGAPz/AAAAAAcAAAAGAP3/AAAAAAcAAAAGAP7/AAAAAAcAAAAGAP//AAAAAAcAAAAHAPH/AAAAAAcAAAAHAPL/AAAAAAcAAAAHAPP/AAAAAAcAAAAHAPT/AAAAAAcAAAAHAPX/AAAAAAcAAAAHAPb/AAAAAAcAAAAHAPf/AAAAAAcAAAAHAPj/AAAAAAcAAAAHAPn/AAAAAAcAAAAHAPr/AAAAAAcAAAAHAPv/AAAAAAcAAAAHAPz/AAAAAAcAAAAHAP3/AAAAAAcAAAAHAP7/AAAAAAcAAAAHAP//AAAAAAcAAAAIAPH/AAAAAAcAAAAIAPL/AAAAAAcAAAAIAPP/AAAAAAcAAAAIAPT/AAAAAAcAAAAIAPX/AAAAAAcAAAAIAPb/AAAAAAcAAAAIAPf/AAAAAAcAAAAIAPj/AAAAAAcAAAAIAPn/AAAAAAcAAAAIAPr/AAAAAAcAAAAIAPv/AAAAAAcAAAAIAPz/AAAAAAcAAAAIAP3/AAAAAAcAAAAIAP7/AAAAAAcAAAAIAP//AAAAAAcAAAAJAPH/AAAAAAcAAAAJAPL/AAAAAAcAAAAJAPP/AAAAAAcAAAAJAPT/AAAAAAcAAAAJAPX/AAAAAAcAAAAJAPb/AAAAAAcAAAAJAPf/AAAAAAcAAAAJAPj/AAAAAAcAAAAJAPn/AAAAAAcAAAAJAPr/AAAAAAcAAAAJAPv/AAAAAAcAAAAJAPz/AAAAAAcAAAAJAP3/AAAAAAcAAAAJAP7/AAAAAAcAAAAJAP//AAAAAAcAAAAKAPH/AAAAAAcAAAAKAPL/AAAAAAcAAAAKAPP/AAAAAAcAAAAKAPT/AAAAAAcAAAAKAPX/AAAAAAcAAAAKAPb/AAAAAAcAAAAKAPf/AAAAAAcAAAAKAPj/AAAAAAcAAAAKAPn/AAAAAAcAAAAKAPr/AAAAAAcAAAAKAPv/AAAAAAcAAAAKAPz/AAAAAAcAAAAKAP3/AAAAAAcAAAAKAP7/AAAAAAcAAAAKAP//AAAAAAcAAAALAPH/AAAAAAcAAAALAPL/AAAAAAcAAAALAPP/AAAAAAcAAAALAPT/AAAAAAcAAAALAPX/AAAAAAcAAAALAPb/AAAAAAcAAAALAPf/AAAAAAcAAAALAPj/AAAAAAcAAAALAPn/AAAAAAcAAAALAPr/AAAAAAcAAAALAPv/AAAAAAcAAAALAPz/AAAAAAcAAAALAP3/AAAAAAcAAAALAP7/AAAAAAcAAAALAP//AAAAAAcAAAAMAPH/AAAAAAcAAAAMAPL/AAAAAAcAAAAMAPP/AAAAAAcAAAAMAPT/AAAAAAcAAAAMAPX/AAAAAAcAAAAMAPb/AAAAAAcAAAAMAPf/AAAAAAcAAAAMAPj/AAAAAAcAAAAMAPn/AAAAAAcAAAAMAPr/AAAAAAcAAAAMAPv/AAAAAAcAAAAMAPz/AAAAAAcAAAAMAP3/AAAAAAcAAAAMAP7/AAAAAAcAAAAMAP//AAAAAAcAAAANAPH/AAAAAAcAAAANAPL/AAAAAAcAAAANAPP/AAAAAAcAAAANAPT/AAAAAAcAAAANAPX/AAAAAAcAAAANAPb/AAAAAAcAAAANAPf/AAAAAAcAAAANAPj/AAAAAAcAAAANAPn/AAAAAAcAAAANAPr/AAAAAAcAAAANAPv/AAAAAAcAAAANAPz/AAAAAAcAAAANAP3/AAAAAAcAAAANAP7/AAAAAAcAAAANAP//AAAAAAcAAAAOAPH/AAAAAAcAAAAOAPL/AAAAAAcAAAAOAPP/AAAAAAcAAAAOAPT/AAAAAAcAAAAOAPX/AAAAAAcAAAAOAPb/AAAAAAcAAAAOAPf/AAAAAAcAAAAOAPj/AAAAAAcAAAAOAPn/AAAAAAcAAAAOAPr/AAAAAAcAAAAOAPv/AAAAAAcAAAAOAPz/AAAAAAcAAAAOAP3/AAAAAAcAAAAOAP7/AAAAAAcAAAAOAP//AAAAAAcAAADx/+//AAAAAAcAAADx//D/AAAAAAcAAADx//H/AAAAAAcAAADx//L/AAAAAAcAAADx//P/AAAAAAcAAADx//T/AAAAAAcAAADx//X/AAAAAAcAAADx//b/AAAAAAcAAADx//f/AAAAAAcAAADx//j/AAAAAAcAAADx//n/AAAAAAcAAADx//r/AAAAAAcAAADx//v/AAAAAAcAAADx//z/AAAAAAcAAADx//3/AAAAAAcAAADx//7/AAAAAAcAAADx////AAAAAAcAAADy/+//AAAAAAcAAADy//D/AAAAAAcAAADy//H/AAAAAAcAAADy//L/AAAAAAcAAADy//P/AAAAAAcAAADy//T/AAAAAAcAAADy//X/AAAAAAcAAADy//b/AAAAAAcAAADy//f/AAAAAAcAAADy//j/AAAAAAcAAADy//n/AAAAAAcAAADy//r/AAAAAAcAAADy//v/AAAAAAcAAADy//z/AAAAAAcAAADy//3/AAAAAAcAAADy//7/AAAAAAcAAADy////AAAAAAcAAADz/+//AAAAAAcAAADz//D/AAAAAAcAAADz//H/AAAAAAcAAADz//L/AAAAAAcAAADz//P/AAAAAAcAAADz//T/AAAAAAcAAADz//X/AAAAAAcAAADz//b/AAAAAAcAAADz//f/AAAAAAcAAADz//j/AAAAAAcAAADz//n/AAAAAAcAAADz//r/AAAAAAcAAADz//v/AAAAAAcAAADz//z/AAAAAAcAAADz//3/AAAAAAcAAADz//7/AAAAAAcAAADz////AAAAAAcAAAD0/+//AAAAAAcAAAD0//D/AAAAAAcAAAD1/+//AAAAAAcAAAD1//D/AAAAAAcAAAD2/+//AAAAAAcAAAD2//D/AAAAAAcAAAD3/+//AAAAAAcAAAD3//D/AAAAAAcAAAD4/+//AAAAAAcAAAD4//D/AAAAAAcAAAD5/+//AAAAAAcAAAD5//D/AAAAAAcAAAD6/+//AAAAAAcAAAD6//D/AAAAAAcAAAD7/+//AAAAAAcAAAD7//D/AAAAAAcAAAD8/+//AAAAAAcAAAD8//D/AAAAAAcAAAD9/+//AAAAAAcAAAD9//D/AAAAAAcAAAD+/+//AAAAAAcAAAD+//D/AAAAAAcAAAD//+//AAAAAAcAAAD///D/AAAAAAcAAAAAAO//AAAAAAcAAAAAAPD/AAAAAAcAAAABAO//AAAAAAcAAAABAPD/AAAAAAcAAAACAO//AAAAAAcAAAACAPD/AAAAAAcAAAADAO//AAAAAAcAAAADAPD/AAAAAAcAAAAEAO//AAAAAAcAAAAEAPD/AAAAAAcAAAAFAO//AAAAAAcAAAAFAPD/AAAAAAcAAAAGAO//AAAAAAcAAAAGAPD/AAAAAAcAAAAHAO//AAAAAAcAAAAHAPD/AAAAAAcAAAAIAO//AAAAAAcAAAAIAPD/AAAAAAcAAAAJAO//AAAAAAcAAAAJAPD/AAAAAAcAAAAKAO//AAAAAAcAAAAKAPD/AAAAAAcAAAALAO//AAAAAAcAAAALAPD/AAAAAAcAAAAMAO//AAAAAAcAAAAMAPD/AAAAAAcAAAANAO//AAAAAAcAAAANAPD/AAAAAAcAAAAOAO//AAAAAAcAAAAOAPD/AAAAAAcAAAA=")
tile_set = SubResource("TileSet_l2ehq")

[node name="Midground" type="TileMapLayer" parent="TileMap" groups=["TileMap"]]
use_parent_material = true
tile_map_data = PackedByteArray("AADx////AAAAAAEAAAAOAP//AAABAAAAAAAOAO//AAACAAAAAADx/+//AAAAAAAAAADy/+//AAABAAAAAADz/+//AAABAAEAAAD0/+//AAABAAIAAAD1/+//AAABAAAAAAD2/+//AAABAAAAAAD3/+//AAABAAEAAAD4/+//AAADAAEAAAAKAO//AAABAAIAAAALAO//AAABAAAAAAAMAO//AAABAAEAAAANAO//AAABAAAAAADx//D/AAACAAAAAADx//H/AAACAAEAAADx//L/AAACAAIAAADx//P/AAACAAEAAADx//T/AAACAAAAAADx//X/AAACAAAAAADx//b/AAACAAAAAADx//f/AAACAAAAAADx//j/AAACAAIAAADx//n/AAACAAEAAADx//r/AAACAAAAAADx//v/AAACAAIAAADx//z/AAACAAEAAADx//3/AAACAAEAAADx//7/AAACAAAAAAAOAPD/AAAAAAEAAAAOAPH/AAAAAAIAAAAOAPL/AAAAAAEAAAAOAPP/AAAAAAAAAAAOAPT/AAAAAAAAAAAOAPX/AAAAAAAAAAAOAPb/AAAAAAEAAAAOAPf/AAAAAAEAAAAOAPj/AAAAAAIAAAAOAPn/AAAAAAAAAAAOAPr/AAAAAAEAAAAOAPv/AAAAAAEAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAADy////AAABAAAAAADz////AAAAAAIAAAD0////AAAAAAIAAAD1////AAAAAAIAAAD2////AAABAAIAAAD3////AAABAAEAAAD4////AAAAAAEAAAD5////AAABAAEAAAD6////AAABAAIAAAD7////AAABAAIAAAD8////AAABAAAAAAD9////AAAAAAIAAAD+////AAACAAAAAAD/////AAACAAEAAAAAAP//AAABAAEAAAABAP//AAABAAIAAAACAP//AAACAAIAAAADAP//AAACAAEAAAAEAP//AAAAAAIAAAAFAP//AAACAAIAAAAGAP//AAABAAEAAAAHAP//AAABAAIAAAAIAP//AAABAAEAAAAJAP//AAABAAEAAAAKAP//AAABAAAAAAALAP//AAABAAEAAAAMAP//AAACAAEAAAANAP//AAAAAAIAAADy//3/AAAEAAYAAADz//3/AAAEAAYAAAD0//3/AAAEAAYAAAD1//3/AAAEAAYAAAD2//3/AAAEAAYAAAD3//3/AAAEAAYAAAD4//3/AAAEAAYAAAD5//3/AAAEAAYAAAD6//3/AAAEAAYAAAD7//3/AAAEAAYAAAD8//3/AAAEAAYAAAD9//3/AAAEAAYAAAACAP3/AAAEAAYAAAADAP3/AAAEAAYAAAAEAP3/AAAEAAYAAAAFAP3/AAAEAAYAAAAGAP3/AAAEAAYAAAAHAP3/AAAEAAYAAAAIAP3/AAAEAAYAAAAJAP3/AAAEAAYAAAAKAP3/AAAEAAYAAAALAP3/AAAEAAYAAAAMAP3/AAAEAAYAAAANAP3/AAAEAAYAAADz//j/AAADAAYAAAD0//T/AAAFAAYAAAD0//j/AAADAAYAAAD1//T/AAAFAAYAAAD1//j/AAADAAYAAAD2//T/AAAFAAYAAAD3//T/AAAFAAYAAAD4//f/AAADAAYAAAD5//f/AAADAAYAAAD6//f/AAADAAYAAAD7//f/AAADAAYAAAD8//T/AAAFAAYAAAD9//T/AAAFAAYAAAD+//T/AAAFAAYAAAD///T/AAAFAAYAAAAAAPT/AAAFAAYAAAABAPT/AAAFAAYAAAACAPT/AAAFAAYAAAADAPT/AAAFAAYAAAAEAPf/AAADAAYAAAAFAPf/AAADAAYAAAAGAPf/AAADAAYAAAAHAPf/AAADAAYAAAAIAPT/AAAFAAYAAAAJAPT/AAAFAAYAAAAKAPT/AAAFAAYAAAAKAPj/AAADAAYAAAALAPT/AAAFAAYAAAALAPj/AAADAAYAAAAMAPj/AAADAAYAAAD7//r/AAAEAAUAAAD8//r/AAAEAAUAAAD5//r/AAADAAMAAAD6//r/AAAEAAUAAAD9//r/AAADAAQAAAACAPr/AAADAAMAAAADAPr/AAAEAAUAAAAEAPr/AAAEAAUAAAAFAPr/AAAEAAUAAAAGAPr/AAADAAQAAAD///H/AAAAAAgAAAAAAPH/AAAAAAgAAAD+//H/AAAAAAgAAAABAPH/AAAAAAgAAAD9//H/AAAAAAgAAAACAPH/AAAAAAgAAAD8//H/AAAAAAgAAAD7//H/AAABAAkAAAADAPH/AAAAAAgAAAAEAPH/AAAAAAkAAAAJAO//AAABAAEAAAAIAO//AAABAAAAAAAHAO//AAAAAAIAAAA=")
tile_set = SubResource("TileSet_l2ehq")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Player1" parent="." groups=["Player"] instance=ExtResource("2_ttv1b")]
position = Vector2(-213, 110)

[node name="Player2" parent="." groups=["Player"] instance=ExtResource("3_aahkk")]
position = Vector2(213, 110)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -135.0
offset_right = 240.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerContainers" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Player1" type="VBoxContainer" parent="UI/PlayerContainers"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
size_flags_horizontal = 2

[node name="P1Score" type="Label" parent="UI/PlayerContainers/Player1"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="UI/PlayerContainers/Player1"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ug30u")
theme_override_styles/fill = SubResource("StyleBoxFlat_qbhxs")
value = 100.0
show_percentage = false

[node name="Player2" type="VBoxContainer" parent="UI/PlayerContainers"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
size_flags_horizontal = 10

[node name="P2Score" type="Label" parent="UI/PlayerContainers/Player2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="UI/PlayerContainers/Player2"]
custom_minimum_size = Vector2(40, 0)
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ug30u")
theme_override_styles/fill = SubResource("StyleBoxFlat_qbhxs")
value = 100.0
show_percentage = false
